--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6772,6 +6772,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\ClassExercicesPlug\" />
     <Folder Include="Scripts\i18n\ngLocale\" />
     <Folder Include="Views\Data\" />
   </ItemGroup>
