Major Update (Angular JS) :
Routing.js was restructured with multiples angular's files
We have seperates controller/ a Factory file and a Service file

--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -4087,6 +4087,7 @@
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_36px.svg" />
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_48px.svg" />
     <Content Include="Images\redCard.svg" />
+    <Content Include="Scripts\03. Services\Services.js" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -4110,6 +4111,29 @@
     <Content Include="Scripts\angular-touch.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\01. AngularControllers\ErrorController.js" />
+    <Content Include="Scripts\02. Factories\Factories.js" />
+    <Content Include="Scripts\01. AngularControllers\HomeController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidDescriptionBattleCardController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidHomeController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidLobbyController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidLoginController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidPlayBattleCardController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidPlayDictationController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidRegistrationController.js" />
+    <Content Include="Scripts\01. AngularControllers\KidSelectExercicesController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherClozeExerciseController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherCustomizeBattleCardController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherDescriptionBattleCardController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherDictationController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherDragAndDropController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherDragAndDropMathsController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherHomeController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherLobbyController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherLoginController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherRegistrationController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherSelectExercicesController.js" />
+    <Content Include="Scripts\01. AngularControllers\TeacherSelectMatterController.js" />
     <Content Include="Scripts\AngularSinglePageScriptApp.js" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\BattleCardJS\battleCardGame.js" />
